--- a/src/layout/Header/style/index.css
+++ b/src/layout/Header/style/index.css
@@ -2,7 +2,7 @@
     /* define variable at root in case of later using */
     --background-color:#000000;
 }
-.m-header{
+.m-header-b{
     background-color: var(--background-color);
     text-align: center;
     position: sticky;
@@ -11,16 +11,16 @@
     top: 0;
     z-index: 999;
 }
-.location{
+.m-header-b .location{
     display: flex;
     justify-content: center;
 }
-.location a{
+.m-header-b .location a{
     margin-top: 15px;
     margin-left: 15px;
     color:#ffffff;
 }
-.trolley{
+.m-header-b .trolley{
     position: absolute;
     text-align: left;
     top: 100%;
@@ -32,28 +32,28 @@
     transform-origin: top ;
     transition:transform 400ms ease-in-out;
 }
-.trolley ul{
+.m-header-b .trolley ul{
     margin:0;
     list-style: none;
     
 }
-.trolley li{
+.m-header-b .trolley li{
     padding-top: .75rem;
     height: 7vh;
     
 }
-.trolley li:hover{
+.m-header-b .trolley li:hover{
    
     background-color: aqua;
 }
 
-.shop-list ul{
+.m-header-b .shop-list ul{
     list-style: none;
     overflow:scroll;
     height: 45vh;
     
 }
-.shop-list li{
+.m-header-b .shop-list li{
     margin-bottom: 1rem;
     display: flex;
     width: 27vw;
@@ -61,7 +61,7 @@
     border: 2px solid #efefef;
     border-radius: 5px;
 }
-.shop-list li .avatar{
+.m-header-b .shop-list li .avatar{
     width: 130px;
     background-image: url('https://images.squarespace-cdn.com/content/v1/585a6e76b3db2b19a94d4553/706b772c-47e0-46ce-b302-9cd9032f9087/IMG-2353.jpg');
     background-size: cover;
@@ -166,29 +166,29 @@
     .nav-toggle-label{
         display: none;
     }
-    .m-header{
+    .m-header-b{
         display: grid;
         grid-template-columns: 1fr auto minmax(600px,1fr) 1fr; /*setting 4 columns*/
     }
-    .location{
+    .m-header-b .location{
         grid-column: 1 / 3;
     }
-    .trolley{
+    .m-header-b .trolley{
         grid-column: 2 / 3;
         all:unset;
         display: flex;
         justify-content: flex-end;
         align-items: center;
     }
-    .trolley ul{
+    .m-header-b .trolley ul{
         display: flex;
         justify-content:flex-end;
     }
-    .trolley Link{
+    .m-header-b .trolley Link{
         opacity: 1;
         position: relative;
     }
-    .trolley Link::before{
+    .m-header-b .trolley Link::before{
         content: '';
         display: block;
         height: 5px;
@@ -200,14 +200,14 @@
         /* transform-origin:left ; grow from left */
         transition:transform ease-in-out 250ms;
     }
-    .trolley Link:hover::before{
+    .m-header-b .trolley Link:hover::before{
         transform: scale(1,1);
     }
-    .trolley li{
+    .m-header-b .trolley li{
         margin-left: 3em;
         margin-bottom: 0;
     }
-    .chatBox .ant-modal-content{
+    .m-header-b .chatBox .ant-modal-content{
         width: 30vw;
         margin-left: 33vw;
      }
