--- a/src/pages/Dashboard/dashboard.css
+++ b/src/pages/Dashboard/dashboard.css
@@ -4,10 +4,13 @@
     display: flex;
 }
 .dashboard-user .m-slide{
-    width: 256px;
+    width: 18.5vw;
     height: 100%;
-   
 }
+.dashboard-user .m-slide .ant-menu-item{
+    font-size: 1rem;
+}
+
 .dashboard-user .m-content{
     flex:1;
     height: 100vh;
