--- a/src/layout/Header/style/index.css
+++ b/src/layout/Header/style/index.css
@@ -75,12 +75,17 @@
     height: 15vh;
     border: 2px solid #efefef;
     border-radius: 5px;
+    cursor: pointer;
 }
 .shop-list li .avatar{
     width: 130px;
     background-image: url('https://images.squarespace-cdn.com/content/v1/585a6e76b3db2b19a94d4553/706b772c-47e0-46ce-b302-9cd9032f9087/IMG-2353.jpg');
     background-size: cover;
     height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #ffffff;
 }
 .shop-list li .left{
     padding: 10px;
