Co-authored-by: YahanW <YahanW@users.noreply.github.com>

--- a/src/pages/Event/Event.css
+++ b/src/pages/Event/Event.css
@@ -41,7 +41,7 @@
     height: 100%;
     padding: 1rem;
     background: linear-gradient(rgba(42, 42, 42, 0.5), rgba(0, 0, 0, 0.5)), 
-    url('https://images.squarespace-cdn.com/content/v1/585a6e76b3db2b19a94d4553/706b772c-47e0-46ce-b302-9cd9032f9087/IMG-2353.jpg');
+    url('https://assets.vogue.com/photos/5ea1a8cfba6a5000096c6188/master/w_2560%2Cc_limit/VO0620_Selfies_114.jpg');
     background-size: cover;
     margin-right: 1rem;
 }
