--- a/src/pages/CheckOut/checkout.css
+++ b/src/pages/CheckOut/checkout.css
@@ -1,14 +1,20 @@
 .checkout{
     display: flex;
-    flex-direction: column;
     align-items: center;
     width: 100vw;
     height: auto;
 }
 .checkout .itemContainer{
-    padding-left: 3vw;padding-right: 3vw;
-    width: 100%;
+    width: 50%;
     height: 80vh;
+}
+.paypalContainer{
+    width: 50%;
+    height: 20vh;
+    padding: 5vh;
+    position: absolute;
+    top: 10vh;
+    right: 0;
 }
 .itemContainer .itemTitle{
     height: 30px;
@@ -19,24 +25,27 @@
     flex-direction: column;
     height: 50%;
     overflow: scroll;
-    border: 1rem solid #efefef;
 }
 .serList .service{
     width: 75%;
     margin-bottom: 1vh;
-    height: 50%;
-    border-bottom: 3px solid #efefef;
-}
-.service .sname, .service .select{
+    height: auto;
     display: flex;
-    height: 50%;
-    width: 100%;
-    align-items: center;
-    position: relative;
 }
-.service button{
-    width: 5vw;
-    height: 50%;
-    position: absolute;
-    right: 0;
+.service .icon{
+    width: 10%;
+    height: 100%;
+    background-image: url("https://images.unsplash.com/photo-1660866838629-8ababef9dab8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80");
+    background-size: cover;
 }
+.service .left{
+    width: 80%;
+    margin-left: 1%;
+}
+
+.service .left .detail{
+   display: flex;
+}
+.service .left .detail h3{
+    margin-right: 1vw;
+ }
