--- a/src/pages/Result/Result.css
+++ b/src/pages/Result/Result.css
@@ -99,13 +99,11 @@
     font-family:'Times New Roman', Times, serif;
     margin-bottom: 3vh;
 }
-.create-event{
-    background-color: #ffffff00;
-    border: 1px solid #ffffff;
-    font-size: 1rem;
-    width: 12vw;
-    height: 6vh;
-    color: white;
+.intro-img button{
+   background-color: rgb(255, 255, 255,.2); 
+   width:10vw;height: 7vh;
+   border: 3px solid #ffffff;
+   color: #ffffff;
 }
 .event-intro .divider{
     width: 70%;
