--- a/src/pages/Profile/Person.css
+++ b/src/pages/Profile/Person.css
@@ -1,7 +1,7 @@
 .PersonList{
     margin-left: 5.5vw;
     width: 90%;
-    height: 35vh;
+    height: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -28,9 +28,9 @@
 }
 
 .PersonList button{
-    width: 85%;
-    height: 15vh;
-    margin-bottom: 1vh;
+    width: 65%;
+    height: 7vh;
+    margin-bottom: 3vh;
     background-color:#729eb2;
     color: #ffffff;
 }
