--- a/src/pages/Result/Result.css
+++ b/src/pages/Result/Result.css
@@ -116,7 +116,7 @@
 .intro-list{
     display: flex;
     justify-content: center;
-    flex-direction: column;
+    flex-direction: row;
     margin-bottom: 5vh;
 }
 .intro-list .list-locate{
