--- a/src/pages/Login/login.css
+++ b/src/pages/Login/login.css
@@ -1,6 +1,6 @@
 
 .loginBase{
-	background: url('https://alacritas.cis.utas.edu.au/~mingked/kit301/JPGs/background_letter.jpg');
+	background: url('https://easyevent.blob.core.windows.net/image/background_letter_e4fbb8c1d64ee8.jpg');
 	background-size: cover;
 	height: 100vh;
 	justify-content: center;
