--- a/src/pages/Venue/Venue.css
+++ b/src/pages/Venue/Venue.css
@@ -51,7 +51,7 @@
 
 .find{
     /*background-color: #80808030;*/
-    background-image: url("https://alacritas.cis.utas.edu.au/~mingked/kit301/JPGs/search_back.jpg");
+    background-image: url("https://images.unsplash.com/photo-1661789558607-d3bf1009e78d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1587&q=80");
     background-size: cover;
     display: flex;
     padding: 30px;
@@ -61,7 +61,7 @@
 .find .logo{
     width:260px;
     height: 100px;
-    background-image: url("https://alacritas.cis.utas.edu.au/~mingked/kit301/PNGs/logo.png");
+    background-image: url("https://easyevent.blob.core.windows.net/image/logo_1dc871378bfda.png");
     background-size: 90%;
     background-repeat: no-repeat;
     margin-left: -120px;
@@ -86,7 +86,7 @@
 }
 
 .iconSearch{
-    background-image: url("https://alacritas.cis.utas.edu.au/~mingked/kit301/JPGs/search.png");
+    background-image: url("https://cdn-icons-png.flaticon.com/512/281/281764.png");
     width: 90px;height: 90px;
     background-repeat: no-repeat;
     background-size: 85%;
