--- a/src/pages/Result/Result.css
+++ b/src/pages/Result/Result.css
@@ -37,29 +37,20 @@
 
 }
 .item-star{
-    width: 270px;
+    width: 320px;
     padding-top: 7px;
     height: inherit;
     padding-left: 125px;
-    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-.item-star .star{
-    width: 60px;
-    height: 60px;
-    background-size: cover;
-    padding-left: 16px;
-    padding-top: 40px;
-    font-size: larger;
-}
-.item-star h4{
-    margin-left: -10px;
-    margin-top: 20px;
+
+.item-star h4{ /*average price*/
+   
     opacity: 60%;
 }
 .item-star h3{
-    margin-left: 10px;
-    margin-left: 18px;
-    margin-top: -10px;
     color:white;
 }
 
