--- a/src/layout/Header/style/index.css
+++ b/src/layout/Header/style/index.css
@@ -63,23 +63,45 @@
     color: #ffffff;
 }
 
+ .ant-modal-header{
+    background-color: aquamarine;
+}
+.shop-list .ant-modal-body{
+    background-color: #efefef;
+}
+.shop-list .ant-modal-body,.shop-list .ant-modal-header{
+   
+    width: 65vw;
+    box-shadow: 5px 10px #b390cd51;
+    margin-left: -10vw;
+    border: rgb(78, 68, 68) solid 1px;
+}
 /*trolley modal*/
 .shop-list ul{
     list-style: none;
     height: 45vh; /*height at here, width at modal itself*/
+    width: 60vw;
+   overflow-y:scroll;
+   background-color: rgb(166, 93, 93);
+   display: flex;
+   justify-content: start;
+   align-items: center;
+   flex-direction: column;
 }
 .shop-list li{
     margin-bottom: 1rem;
     display: flex;
-    width: 30vw;
+   width: 50VW;
     height: 15vh;
     border: 2px solid #efefef;
     border-radius: 5px;
     cursor: pointer;
-    overflow: auto;
+
+   
+    
 }
 .shop-list li .avatar{
-    width: 130px;
+    width: 25%;
     background-image: url('https://images.squarespace-cdn.com/content/v1/585a6e76b3db2b19a94d4553/706b772c-47e0-46ce-b302-9cd9032f9087/IMG-2353.jpg');
     background-size: cover;
     height: 100%;
@@ -90,15 +112,25 @@
 }
 .shop-list li .left{
     padding: 10px;
-    width: 12.5vw;
+    width: 20vw;
     height: 100%;
+
+}
+.shop-list li .right{
+    display: flex;
+    justify-content: space-evenly;
+    width: 25vw;
+    background-color: rgb(34, 221, 118);
+    margin-left: 2vw;
+    z-index: 0;
 }
 .shop-list li .right button{
-    width: 7vw;
+    width: 10vw;
     height: 5vh;
     margin-top: 4vh;
-    margin-left: -30px;
+background-color: rgb(175, 25, 25);
 }
+
 
 .shop-list li .left h3{
     height: 5vh;
