--- a/src/pages/Dashboard/dashboard.css
+++ b/src/pages/Dashboard/dashboard.css
@@ -5,7 +5,7 @@
 }
 .dashboard-user .m-slide{
     width: 18.5vw;
-    height: 100%;
+    height: 85%;
 }
 .dashboard-user .m-slide .ant-menu-item{
     font-size: 1rem;
@@ -13,12 +13,10 @@
 
 .dashboard-user .m-content{
     flex:1;
-    height: 100vh;
-    overflow: auto;
-   
+    height: 90vh;  
 }
 .dashboard-user .ant-menu{
-    height: 100vh;
+    height: 90vh;
 }
 
 .dashboard-user .m-operate{
@@ -37,5 +35,5 @@
 
 
 .dashboard-user .m-filter{
-    margin:10px 0;
+    margin: 10 0;
 }
