--- a/src/pages/Venue/Venue.css
+++ b/src/pages/Venue/Venue.css
@@ -17,7 +17,7 @@
     padding-left: 0;
     overflow: hidden;
     margin-top: 0;
-    overflow: scroll;
+    overflow-y: scroll;
 }
 .eve-col li{
     list-style: none;
