--- a/src/pages/Venue/Venue.css
+++ b/src/pages/Venue/Venue.css
@@ -49,13 +49,9 @@
     transform: scale(1.5); 
 }
 
-.find{
+.filter{
     /*background-color: #80808030;*/
     background-image: url("https://images.unsplash.com/photo-1661789558607-d3bf1009e78d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1587&q=80");
-    background-size: cover;
-    display: flex;
-    padding: 30px;
-    justify-content:center;
     opacity: 0.6;
 }
 .find .logo{
@@ -132,6 +128,5 @@
     margin-left: 305px;
     margin-top: 5px;
     opacity: 40%;
-    border:none;
-    
+    border:none;   
 }
