Co-authored-by: YahanW <YahanW@users.noreply.github.com>

--- a/src/layout/Header/style/index.css
+++ b/src/layout/Header/style/index.css
@@ -59,7 +59,7 @@
     opacity: 0; /*default does't appear*/
     transition: opacity 150ms ease-in-out; /*last one is animation delay*/
 }
-.trolley .tro-item{
+.nav-links .tro-item{
     color: #ffffff;
 }
 
