--- a/src/layout/Header/style/index.css
+++ b/src/layout/Header/style/index.css
@@ -82,7 +82,7 @@
     height: 45vh; /*height at here, width at modal itself*/
     width: 60vw;
    overflow-y:scroll;
-   background-color: rgb(166, 93, 93);
+   background-color: white;
    display: flex;
    justify-content: start;
    align-items: center;
@@ -120,7 +120,7 @@
     display: flex;
     justify-content: space-evenly;
     width: 25vw;
-    background-color: rgb(34, 221, 118);
+    background-color: white;
     margin-left: 2vw;
     z-index: 0;
 }
@@ -128,7 +128,7 @@
     width: 10vw;
     height: 5vh;
     margin-top: 4vh;
-background-color: rgb(175, 25, 25);
+background-color: rgb(45, 164, 204);
 }
 
 
