--- a/src/pages/Dashboard/dashboard.css
+++ b/src/pages/Dashboard/dashboard.css
@@ -1,11 +1,17 @@
 @import '~antd/dist/antd.css';
 
+.dashboard{
+    height:100vh;
+    padding-top: 10vh;
+    overflow: hidden;
+}
+
 .dashboard-user{
     display: flex;
 }
 .dashboard-user .m-slide{
     width: 18.5vw;
-    height: 100%;
+    height: inherit;
 }
 .dashboard-user .m-slide .ant-menu-item{
     font-size: 1rem;
@@ -13,7 +19,7 @@
 
 .dashboard-user .m-content{
     flex:1;
-    height: 100vh;  
+    height: inherit;  
 }
 .dashboard-user .ant-menu{
     height: 100vh;
