--- a/src/pages/Home/homes/Navbar.css
+++ b/src/pages/Home/homes/Navbar.css
@@ -1,6 +1,6 @@
 .navbar {
     width: 100vw;
-    background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
+    background: rgb(3, 3, 32);
     height: 10vh;
     display: flex;
     justify-content: center;
@@ -9,7 +9,7 @@
     position: sticky;
     top: 0;
     z-index: 999;
-    position:absolute;
+    /* position:absolute; */
 }
 
 .navbar-container {
