--- a/src/layout/Header/style/index.css
+++ b/src/layout/Header/style/index.css
@@ -71,16 +71,16 @@
 }
 .shop-list .ant-modal-body,.shop-list .ant-modal-header{
    
-    width: 65vw;
+    /* width: 65vw; */
     box-shadow: 5px 10px #b390cd51;
-    margin-left: -10vw;
+    /* margin-left: -10vw; */
     border: rgb(78, 68, 68) solid 1px;
 }
 /*trolley modal*/
 .shop-list ul{
     list-style: none;
     height: 45vh; /*height at here, width at modal itself*/
-    width: 60vw;
+    /* width: 60vw; */
    overflow-y:scroll;
    background-color: white;
    display: flex;
@@ -149,7 +149,7 @@ background-color: rgb(45, 164, 204);
 .service-list li {
     margin-bottom: 1rem;
     display: flex;
-    width: 30vw;
+    /* width: 30vw; */
     height: 15vh;
     border: 2px solid #efefef;
     border-radius: 5px;
@@ -169,23 +169,31 @@ background-color: rgb(45, 164, 204);
 
 .service-list li .left {
     padding: 10px;
-    width: 12.5vw;
+    width: 20vw;
     height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .service-list li .right button {
     width: 7vw;
     height: 5vh;
     margin-top: 4vh;
-    margin-left: -30px;
+    margin-left:6vw;
 }
 
 .service-list li .left h3 {
-    height: 5vh;
+    height: 8vh;
     font-size: 1.5rem;
     font-weight: 400;
-    overflow: hidden;
-    width: 185px;
+}
+.service-list li .left h4{
+    display: flex ;
+}
+.service-list li .left h4 :last-child {
+    
+    margin-left: 5vw;
+    
 }
 
 .shop-list .ant-modal-header{
