--- a/src/pages/Result/Result.css
+++ b/src/pages/Result/Result.css
@@ -73,7 +73,7 @@
     align-items: center;
 }
 .event-intro .intro-img{
-    background-image: url("https://images.unsplash.com/photo-1517457373958-b7bdd4587205?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2069&q=80");
+    background-image: url("https://images.pexels.com/photos/260922/pexels-photo-260922.jpeg");
     width: 100%;
     height: 45vh;
     background-size: cover;
@@ -83,7 +83,29 @@
     align-items: center;
     justify-content: center;
 }
-.intro-img h2{
+
+.event-intro .intro-img .actions{
+
+    width: 30vw;
+    height:15vh;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-end;
+    margin-top: 2vh;
+}
+.event-intro .intro-img .actions .createNew{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.event-intro .intro-img .actions .createNew h3{
+    margin-top: 3vh;
+}
+
+.intro-img h2,h1{
     font-size: 3.2rem;
     color: rgb(255, 255, 255);
     font-family:'Times New Roman', Times, serif;
@@ -92,13 +114,22 @@
     font-size: 1.2rem;
     color: rgb(206, 206, 206);
     font-family:'Times New Roman', Times, serif;
-    margin-bottom: 3vh;
 }
 .intro-img button{
    background-color: rgb(255, 255, 255,.2); 
    width:10vw;height: 7vh;
    border: 3px solid #ffffff;
    color: #ffffff;
+   margin-top: 3vh;  
+}
+.intro-img button:hover{
+    background-color: rgba(35, 211, 194, 0.862);
+    width: 10vw;
+    height: 7.5vh;
+    border: 3px solid #ffffff;
+    color: #ffffff;
+    margin-top: 2.5vh;
+    cursor: pointer;
 }
 .event-intro .divider{
     width: 70%;
