--- a/src/pages/Profile/profile.css
+++ b/src/pages/Profile/profile.css
@@ -20,7 +20,8 @@
     height: 32vh;
     max-height: 320px;
     /* background-image: url("https://s3.ap-southeast-2.amazonaws.com/cdn.greekherald.com.au/wp-content/uploads/2020/07/05194617/default-avatar.png"); */
-    background-size: cover;
+    background-size:cover;
+    background-position: center;
     border-radius: 15px;
 }
 .avatar button{
@@ -41,6 +42,7 @@
     
 }
 .desc h1{
+    color: black;
     border-bottom: 0.5vh solid #919fcc;
 }
 .navies{
@@ -70,35 +72,30 @@
     height: 35vh;
     background-color: #908ea760;
     padding: 1vh;
-   
+    overflow-y: scroll;
 }
 
-.booking .book-link  {
-    width: 100%;
-    height: 23%;
-    background-color: #B0E0E6;
-    border-bottom: 3px solid rgba(106, 133, 136, 0.6);
-    margin-top: 1vh;
-    display: flex;
-    
-    padding-top: 1vh;
-    padding-left:3vw ;
+.bookingTable .book-link td:hover {
+    background-color: #dfa6d1;
 }
-.booking .book-link:hover {
-    background-color: #d78bc4;
+.bookingTable th{
+    font-size: 1rem;
+    width:25vw;
+    border-bottom: 0.1vh solid #3b4979;
 }
-.booking .book-link h3{
-    margin-top: -0.5vh;
-    margin-left: 12vw;
-   
+.bookingTable .book-link td{
+    padding-top:1vh;
+    padding-bottom: 1vh;
+    align-items: center;
+    justify-content: center;
 }
-.booking .book-link h4{
-    margin-left: 12vw;
+.bookingTable td {
+    font-size: 1rem;
+    width: 25vw;
+    border-bottom: 0.1vh solid #919fcc;
+    padding-left: 12vh;
 }
-.booking .book-link h2{
-    margin-top: -0.5vh;
-    color: #5169ad;
-}
+
 .bookBTN{
     margin-top: 1%;
     width: 70%;
