--- a/src/pages/Profile/History.css
+++ b/src/pages/Profile/History.css
@@ -1,58 +1,33 @@
-.history-book{
+.items{
+    width: 90vw;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    background-color: white;
-}
-.history-book .history-title{
-    padding-left: 41.5vw;
-    margin-bottom: 3vh;
-    padding-top: 2vh;
-}
-.slide-show{
-    width: 70vw;
-    margin-left: 15vw;
-}
-.Details{
-    margin-top: 3vh;
-    height: 40vh;
-    display: flex;
-    justify-content: center;
-    
-}
-.Details .detail{
-    height: 85%;
-    width: 25%;
-    margin: 1vw;
-    padding-left: 9%;
-}
-.history-book button{
-    z-index: 15;
-    margin-top: -10.5vh;
-    width: 15vw;
-    height: 10vh;
-    margin-left: 75vw;
-    font-size: 1rem;
-    border:none;
-}
-#bk-cancel{
-    background-color: brown;
-   
-   
-}
-#bk-review{
-    background-color:rgb(196, 139, 48);
-}
-.bookLink{
-    color: white;
-}
-.detail h2{
-    font-size: 1.4rem;
+    align-items: center;
 }
 
-@media screen and (max-width:800px){
-    .history-book .history-title{
-        padding-left: 25.5vw;
-       
-    }
+.items .item{
+    width: 95%;
+    margin-bottom: 1vh;
+    height: 12vh;
+    display: flex;
+    margin-top: 2vh;
+    padding-left: 2vw;
+    padding-top: 1vh;
+    border: solid 1px black;
+    border-radius: 15px;
+    align-items: center;
+}
+.items .item .sname{
+    font-size: 3rem;
+}
+.item button{
+    width: 15vw;
+    height:3vh;
+    position: relative;
+    left: 10px;
+}
+
+.item h3{
+    margin-left: 2vw;
+    font-size: 1rem;
 }
