--- a/src/pages/Profile/History.css
+++ b/src/pages/Profile/History.css
@@ -18,16 +18,24 @@
     align-items: center;
 }
 .items .item .sname{
-    font-size: 3rem;
+    font-size: 2rem;
+    height: 90%;
+    width: 45%;
+    white-space: nowrap;  
+    overflow: hidden;
+    text-overflow: ellipsis; 
+    margin-top: 10px;
 }
 .item button{
     width: 15vw;
-    height:3vh;
-    position: relative;
-    left: 10px;
+    height:7vh;
 }
 
 .item h3{
+    width: 20vw;
     margin-left: 2vw;
     font-size: 1rem;
+    white-space: nowrap;  
+    overflow: hidden;
+    text-overflow: ellipsis; 
 }
