--- a/src/pages/Result/Result.css
+++ b/src/pages/Result/Result.css
@@ -73,11 +73,12 @@
     align-items: center;
 }
 .event-intro .intro-img{
-    background-image: url("https://images.pexels.com/photos/260922/pexels-photo-260922.jpeg");
+    /* background-image: url("https://images.pexels.com/photos/260922/pexels-photo-260922.jpeg"); */
     width: 100%;
     height: 45vh;
     background-size: cover;
     background-repeat: no-repeat;
+    background-position:center;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -107,19 +108,20 @@
 
 .intro-img h2,h1{
     font-size: 3.2rem;
-    color: rgb(255, 255, 255);
+    color: rgb(93, 89, 89);
+    border: black;
     font-family:'Times New Roman', Times, serif;
 }
 .intro-img h3{
     font-size: 1.2rem;
-    color: rgb(206, 206, 206);
+    color: rgb(71, 67, 67);
     font-family:'Times New Roman', Times, serif;
 }
 .intro-img button{
    background-color: rgb(255, 255, 255,.2); 
    width:10vw;height: 7vh;
-   border: 3px solid #ffffff;
-   color: #ffffff;
+   border: 3px solid #1f1d1d;
+   color: #000000;
    margin-top: 3vh;  
 }
 .intro-img button:hover{
