--- a/src/pages/Profile/History.css
+++ b/src/pages/Profile/History.css
@@ -20,13 +20,14 @@
 .items .item .sname{
     font-size: 2rem;
     height: 90%;
-    width: 45%;
+    width: 35%;
     white-space: nowrap;  
     overflow: hidden;
     text-overflow: ellipsis; 
     margin-top: 10px;
 }
 .item button{
+    margin-left: 15vw;
     width: 15vw;
     height:7vh;
 }
