fix image path on checkout page

--- a/src/pages/CheckOut/checkout.css
+++ b/src/pages/CheckOut/checkout.css
@@ -46,7 +46,7 @@
 .service .icon{
     width: 20%;
     height: 15vh;
-    background-image: url("https://images.unsplash.com/photo-1660866838629-8ababef9dab8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80");
+    /* background-image: url("https://images.unsplash.com/photo-1660866838629-8ababef9dab8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"); */
     background-size: cover;
 }
 .service .left{
